fully functional application

--- a/Flask/static/css/app.css
+++ b/Flask/static/css/app.css
@@ -103,9 +103,10 @@ section:first-child {
 }
 
 .gif-img {
-    height: 100%;
+    max-height: 100%;
     overflow-y: hidden;
     cursor: grab;
+    max-width: 100%;
     z-index: 1;
 }
 
@@ -237,3 +238,41 @@ section:first-child {
         transition: font-size 0.2s;
 }
 
+canvas {
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+/* DEMO-SPECIFIC STYLES */
+.typewriter {
+  color: white;
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid red; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+/*  margin: 0 auto;  Gives that scrolling effect as the typing happens */
+  letter-spacing: .05em;   /*Adjust as needed */
+  font-size: 28px;
+  animation: 
+    typing 3.5s steps(30, end),
+    blink-caret .5s step-end infinite;
+  position: absolute;
+  text-align: center;
+  margin-left: 10%;
+    z-index: 1;
+/*  transform: translateY(100%) translateX(50%);*/
+}
+
+/* The typing effect */
+/*
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+*/
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange }
+}
