--- a/Flask/templates/upload.html
+++ b/Flask/templates/upload.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <!-- iCardio.ai -->
 <html style="height:100%;overscroll-behavior: none;">
-
 <head>
     <title>iCardio.ai</title>
     <link rel="icon" type="image/png" href="images/favicon-32x32.png" />
@@ -11,26 +10,102 @@
     <link type="text/css" rel="stylesheet" href="static/css/materialize.css" media="screen,projection" />
     <!--Import app.css-->
     <link type="text/css" rel="stylesheet" href="static/css/app.css" media="screen,projection" />
+    <link href="static/css/filepond.css" rel="stylesheet">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body style="background-color: black">
-   <form method="post" enctype="multipart/form-data" style="transform: translate(50%, 100%);width: 50%;">
-    
-    <h1 id='daniel'> {{message}} </h1>
-       <div class="file-field input-field">
-      <div class="btn analysis-button">
-        <span>Upload Dicoms</span>
-        <input type="file" name="file" multiple>
-      </div>
-      <div class="file-path-wrapper">
-        <input class="file-path validate" type="text" style="color:white">
-      </div>
-      <button class="btn waves-effect waves-light analysis-button" type="submit" value="upload" name="action">Commence Processing
+    <canvas id=c></canvas>
+    <span style="display:none" id="message">{{message}}</span>
+
+       <h3 class="loader typewriter" id="typewriter"></h3>
+
+   <form action="/upload" method="post" class="dropzone" enctype="multipart/form-data" style="transform: translate(50%, 100%);width: 50%;">
+    <div class="file-field input-field">
+<!--      <div class="btn analysis-button">-->
+<!--        <span>Upload Dicoms</span>-->
+        <input type="file" name="dicoms" multiple>
+<!--      </div>-->
+<!--
+      <button class="btn-commence waves-effect waves-light analysis-button" type="submit" name="action">Commence Processing
           <i class="material-icons right" style="background-color: red">bolt</i>
       </button>
+-->
     </div>
   </form>
 </body>
-<script type="text/javascript" src="static/js/materialize.min.js"></script>
+  <!-- Load FilePond library -->
+  <script src="static/js/filepond.js"></script>
+    <script src="static/js/network.js"></script>
+<script>
+const inputElement = document.querySelector('input[type="file"]');
+const pond = FilePond.create( inputElement );
+    
+FilePond.setOptions({
+  server: {
+        url: '/upload',
+  }
+});
+console.log(file.status)
+if (file.status === FilePond.FileStatus.PROCESSING_COMPLETE) {
+window.location.replace("/loader");   
+}
+    
+    // set up text to print, each item in array is new line
+//var set = new Array(
+//"There are only 10 types of people in the world:", 
+//"Those who understand binary, and those who don't"
+//);
+alert(document.getElementById("message").innerHTML);
+var setData = document.getElementById("message").innerHTML;
+var iSpeed = 10; // time delay of print out
+var iIndex = 0; // start printing array at this position
+var iArrLength = setData.length; // the length of the text array
+var iScrollAt = 20; // start scrolling up at this many lines
+var shouldChange = 1;
+var iTextPos = 0; // initialise text position
+var sContents = ''; // initialise contents variable
+var iRow; // initialise current row
+var shouldStop = 0;
+
+function typewriter()
+{
+ if(shouldChange == 1)
+ {
+	 iIndex = 0; 
+	 iArrLength = setData.length; 
+	 iScrollAt = 20; 
+	 shouldChange = 0;
+	 iTextPos = 0; 
+ }
+ if(shouldStop == 1)
+ return;
+
+ sContents = ' ';
+ iRow = Math.max(0, iIndex-iScrollAt);
+ var destination = document.getElementById("typewriter");
+ 
+// while ( iRow < iIndex ) {
+//  sContents += aText[iRow++] + '<br />';
+// }
+ destination.innerHTML = sContents + setData.substring(0, iTextPos) + "";
+ if ( iTextPos++ == iArrLength ) {
+  iTextPos = 0;
+  iIndex++;
+  shouldStop = 1;
+//  debugger;
+ // if ( iIndex != aText.length ) {
+   iArrLength = setData.length;
+   
+   //setTimeout("typewriter()", 500);
+   //}
+
+}
+}
+    setInterval(function() {
+     typewriter();
+	 }, 50);
+
+    
+</script>
 </html>
