--- a/Flask/templates/app.html
+++ b/Flask/templates/app.html
@@ -32,50 +32,44 @@
 <div class="split-vertical-2 boxB right">
     <div class="split-horizontal top img-analysis">
         <div class="split-display">
-            <p class="meta-text-left">Frame 15/77</p>
-            <p class="meta-text-center">34</p>
-            <p class="meta-text-right">PSAX</p>
+            <p class="meta-text-left"></p>
+            <p class="meta-text-center"></p>
+            <p class="meta-text-right"></p>
             <div ondrop="drop(event)"class="analysis-div">
                 <h2 class='title drop-me'>Drop Me Here</h2>
             </div>
         </div>
         <div class="split-display right">
-            <p class="meta-text-left">Frame 15/77</p>
-            <p class="meta-text-center">34</p>
-            <p class="meta-text-right">PSAX</p>
+            <p class="meta-text-left"></p>
+            <p class="meta-text-center"></p>
+            <p class="meta-text-right"></p>
             <div class="analysis-div">
                 <h2 class='title drop-me'>Drop Me Here</h2>
             </div>
         </div>
         <div class="report controls">
-            <h3 class="report-text">EF: 87% BiPlane: 89%</h3>
-            <a class="waves-effect waves-light btn analysis-button report-button">Assess WMA</a>
-            <a class="waves-effect waves-light btn analysis-button report-button">Assess EF</a>
-            <a class="waves-effect waves-light btn analysis-button report-button">Assess Strain</a>
+            <a class="btn report-button" style="margin:0px -4px 0px 0px" disabled>No views selected.</a>
         </div>
     </div>
     <div class="split-horizontal bottom img-analysis">
         <div class="split-display">
-            <p class="meta-text-left">Frame 15/77</p>
-            <p class="meta-text-center">34</p>
-            <p class="meta-text-right">PSAX</p>
+            <p class="meta-text-left"></p>
+            <p class="meta-text-center"></p>
+            <p class="meta-text-right"></p>
             <div class="analysis-div">
                 <h2 class='title drop-me'>Drop Me Here</h2>
             </div>
         </div>
         <div class="split-display right">
-            <p class="meta-text-left">Frame 15/77</p>
-            <p class="meta-text-center">34</p>
-            <p class="meta-text-right">PSAX</p>
+            <p class="meta-text-left"></p>
+            <p class="meta-text-center"></p>
+            <p class="meta-text-right"></p>
             <div class="analysis-div">
                 <h2 class='title drop-me'>Drop Me Here</h2>
             </div>
         </div>
         <div class="report controls" style="border:none;">
-            <h3 class="report-text">EF: 87% BiPlane: 89%</h3>
-            <a class="waves-effect waves-light btn analysis-button report-button">Assess WMA</a>
-            <a class="waves-effect waves-light btn analysis-button report-button">Assess EF</a>
-            <a class="waves-effect waves-light btn analysis-button report-button">Assess Strain</a>
+            <a class="btn report-button" style="margin:0px -4px 0px 0px" disabled>No views selected.</a>
         </div>
     </div>
 </div>
@@ -86,7 +80,7 @@
 <!-- jquery UI script -->
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
 <!-- materialize js -->
-<script type="text/javascript" src="static/js/materialize.min.js"></script>
+<script type="text/javascript" src="static/js/materialize.js"></script>
 <!-- scalable verticle divider -->
 <script type="application/javascript" src="static/js/divider.js"></script>
 <!-- tools -->
