--- a/Flask/templates/loader.html
+++ b/Flask/templates/loader.html
@@ -139,7 +139,7 @@ function typewriter() {
 
     sContents = ' ';
     iRow = Math.max(0, iIndex-iScrollAt);
-    
+    console.log('test')
     var destination = document.getElementById("typewriter");
     destination.innerHTML = sContents + setData.substring(0, iTextPos) + "";
 
