--- a/Flask/static/css/app.css
+++ b/Flask/static/css/app.css
@@ -122,7 +122,7 @@ section:first-child {
 }
 
 .controls {
-    padding: 6px;
+    padding: 9px;
     bottom: 0;
     position: absolute;
 }
@@ -171,8 +171,28 @@ section:first-child {
 
 .report-button {
     display: inline-block;
-    margin: -12px 0px 0px 10px;
+    margin: 0px 0px 0px 10px;
 }
+
+.report-detail {
+    background-color: darkgray !important;
+    font-size: 15px;
+    font-family: 'Heebo', sans-serif;
+    font-weight: 500;
+    letter-spacing: 0px;
+    color: #4A4A4A !important;
+    margin: 0 0 0 10px; 
+    display: inline-block;
+}
+
+.tools-left{
+    float:left;
+}
+
+.tools-right{
+    float:right;
+}
+
 
 .display {
     position: relative;
