--- a/Flask/templates/loader.html
+++ b/Flask/templates/loader.html
@@ -79,7 +79,7 @@ var iRow; // initialise current row
 
 // continously reads status.txt for updates: 
 function checkText() {
-    $.get('static/status.txt', function(data) {
+    $.get('static/status.txt?_=' + new Date().getTime(), function(data) {
         
         // split status.txt by individual lines:
         var statusLines = data.split('\n')
@@ -89,8 +89,9 @@ function checkText() {
         else {
             
             // get secont to last line of status.txt:
-            newData = statusLines[statusLines.length-2]            
-            console.log(newData)
+            newData = statusLines[statusLines.length-2]
+            console.log('newData: ' + newData)
+            
         }
         
         if (newData == 'Done') {
@@ -98,10 +99,15 @@ function checkText() {
         }
         
         if (setData == newData){
+            
             return;
         } 
         else {
+            var str = newData;
             setData = newData;
+            console.log('setData: ' + setData)
+            //typewriter(str);
+            typewriter();
             shouldChange = 1;
             if(setData != undefined){
             }
@@ -127,32 +133,83 @@ var sContents = ''; // initialise contents variable
 var iRow; // initialise current row
 var shouldStop = 0;
 
-function typewriter() {
-    if(shouldChange == 1) {
-        iIndex = 0; 
-        iArrLength = setData.length; 
-        iScrollAt = 20; 
-        shouldChange = 0;
-        iTextPos = 0; 
-    }
-    if(shouldStop == 1) return;
+// function typewriter() {
+//     if(shouldChange == 1) {
+//         iIndex = 0; 
+//         iArrLength = setData.length; 
+//         iScrollAt = 20; 
+//         shouldChange = 0;
+//         iTextPos = 0; 
+//     }
+//     if(shouldStop == 1) return;
 
-    sContents = ' ';
-    iRow = Math.max(0, iIndex-iScrollAt);
-    console.log('test')
-    var destination = document.getElementById("typewriter");
-    destination.innerHTML = sContents + setData.substring(0, iTextPos) + "";
+//     sContents = ' ';
+//     iRow = Math.max(0, iIndex-iScrollAt);
+//     console.log('test')
+//     var destination = document.getElementById("typewriter");
+//     destination.innerHTML = sContents + setData.substring(0, iTextPos) + "";
 
-    if (iTextPos++ == iArrLength) {
-    iTextPos = 0;
-    iIndex++;
-    shouldStop = 1;
-    iArrLength = setData.length;
-    }
+//     if (iTextPos++ == iArrLength) {
+//     iTextPos = 0;
+//     iIndex++;
+//     shouldStop = 1;
+//     iArrLength = setData.length;
+//     }
+// }
+
+   
+    
+    
+
+var iSpeed = 100; // time delay of print out
+var iIndex = 0; // start printing array at this posision
+var iArrLength = setData.length; // the length of the text array
+var iScrollAt = 20; // start scrolling up at this many lines
+ 
+var iTextPos = 0; // initialise text position
+var sContents = ''; // initialise contents variable
+var iRow; // initialise current row
+ 
+function typewriter()
+{
+ sContents =  ' ';
+ iRow = Math.max(0, iIndex-iScrollAt);
+ var destination = document.getElementById("typewriter");
+ 
+ destination.innerHTML = sContents + setData.substring(0, iTextPos);
+ if ( iTextPos++ == iArrLength ) {
+  iTextPos = 0;
+  iIndex++;
+  if ( iIndex != setData.length ) {
+   iArrLength = setData.length;
+   setTimeout("typewriter()", 500);
+  }
+ } else {
+  setTimeout("typewriter()", iSpeed);
+ }
 }
 
-setInterval(function() {
-    typewriter();
-}, 100);
+// function typewriter(str) {
+    
+//     var destination = document.getElementById("typewriter");
+//     var i = 0
+    
+//     if (i<str.length) {
+    
+//         console.log('i: ' + i)
+//         var partial_str = str.substring(0, i);
+//         console.log('partial_str: ' + partial_str)
+ 
+//         destination.innerHTML = partial_str;
+//         i++;
+//         setTimeout("typewriter()", iSpeed);
+        
+//     }
+    
+//     setTimeout("typewriter()", 500);
+// } 
+    
+    
+  
 
 </script></html>
