--- a/Flask/templates/upload.html
+++ b/Flask/templates/upload.html
@@ -18,12 +18,12 @@
 <body style="background-color: black">
        <h3 class="loader typewriter" id="typewriter"></h3>
 <canvas id=c></canvas>
-   <div id="commence" style="opacity: 1;width: 100%;height:100%;position: absolute;visibility: hidden;transition: 2s;opacity: 1;transition: opacity 1s ease-in-out;-moz-transition: opacity 1s ease-in-out;-webkit-transition: opacity 1s ease-in-out;"><a class="waves-effect waves-light btn analysis-button modal-trigger" href="#modal1" style="transform: translate(0%, 480%);right: -25%;">Commence Processing</a></div>
+   <div id="commence" style="opacity: 1;width: 100%;height:100%;position: absolute;visibility: hidden;transition: 2s;opacity: 1;transition: opacity 1s ease-in-out;-moz-transition: opacity 1s ease-in-out;-webkit-transition: opacity 1s ease-in-out;"><a class="waves-effect waves-light btn analysis-button modal-trigger" href="/loader" style="transform: translate(0%, 480%);right: -25%;">Commence Processing</a></div>
    <form action="#" method="post" enctype="multipart/form-data" style="transform: translate(50%, 100%);width: 50%;">
     <div class="file-field input-field">
 <!--      <div class="btn analysis-button">-->
 <!--        <span>Upload Dicoms</span>-->
-        <input type="file" name="filepond[]" multiple>
+        <input type="file" name="filepond" multiple>
 <!--      </div>-->
 <!--
       <button class="btn-commence waves-effect waves-light analysis-button" type="submit" name="action">Commence Processing
@@ -53,7 +53,8 @@ function isLoadingCheck(){
         fetch('/upload',{
             method: 'POST',
             async: 'true',
-            data: {files},            
+            data: {files},
+            reroute:true,
         })
         document.getElementById('commence').style.visibility="visible";
     }
@@ -70,7 +71,7 @@ FilePond.registerPlugin(
 );
 
 FilePond.setOptions({
-    server: {url:'/upload',method: 'post'},
+    server: {url:'/upload', method:'POST'},
     withCredentials: true,
     allowMultiple: true,
     allowFileEncode: true,
