updates to frontend on master branch

--- a/Flask/templates/index.html
+++ b/Flask/templates/index.html
@@ -30,10 +30,10 @@
                                     <p>Echo Analysis in a<br><strong> Heartbeat</strong>
 </p>
 									<ul class="actions">
-										<li><a href="/app"><button style="
+										<li><a href="/demo"><button style="
     background: red;
     box-shadow: none;
-                                            ">Try the webapp (beta)</button></a></li>
+                                            ">See our demo</button></a></li>
 									</ul>
 								</div>
 								<div class="container" data-position="25% 25%">
