--- a/Flask/templates/demo.html
+++ b/Flask/templates/demo.html
@@ -11,6 +11,7 @@
     <link type="text/css" rel="stylesheet" href="static/css/materialize.css" media="screen,projection" />
     <!--Import app.css-->
     <link type="text/css" rel="stylesheet" href="static/css/app.css" media="screen,projection" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tippy.js/0.3.0/tippy.css" />
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
@@ -36,7 +37,7 @@
             <p class="meta-text-center"></p>
             <p class="meta-text-right"></p>
             <div ondrop="drop(event)"class="analysis-div">
-                <h2 class='title drop-me' title='test'>Drag View Here</h2>
+                <h2 class='title drop-me'>Drag View Here</h2>
             </div>
         </div>
         <div class="split-display right">
@@ -48,7 +49,7 @@
             </div>
         </div>
         <div class="report controls">
-            <a class="btn report-button" style="margin:0px -4px 0px 0px" disabled>No views selected.</a>
+            <a class="btn report-button" title="Drag and drop me in one of the panes to the right" style="margin:0px -4px 0px 0px">No views selected.</a>
         </div>
     </div>
     <div class="split-horizontal bottom img-analysis">
@@ -69,7 +70,7 @@
             </div>
         </div>
         <div class="report controls" style="border:none;">
-            <a class="btn report-button" style="margin:0px -4px 0px 0px" disabled>No views selected.</a>
+            <a class="btn report-button" title="Drag and drop me in one of the panes to the right" style="margin:0px -4px 0px 0px">No views selected.</a>
         </div>
     </div>
 </div>
@@ -79,6 +80,7 @@
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
 <!-- jquery UI script -->
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tippy.js/0.3.0/tippy.js"></script>
 <!-- materialize js -->
 <!-- <script type="text/javascript" src="static/js/materialize.js"></script> -->
 <!-- scalable verticle divider -->
@@ -87,3 +89,4 @@
 <script type="application/javascript" src="static/js/tools.js"></script>
 <!-- image controllers -->
 <script type="application/javascript" src="static/js/windows.js"></script>
+<script type="application/javascript">
