added functionality to load models on cpu

--- a/Applications/ProductionWebApp/templates/index.html
+++ b/Applications/ProductionWebApp/templates/index.html
@@ -130,12 +130,12 @@
                                         <div class="card">
                                     <img src="static/images/Joseph.jpg" alt="Avatar" class="avatar">
                                     <p><strong>Joseph Sokol</strong><br>Founder & CEO</p>
-                                    <p>Joseph is the leading visionary and technologist of ECGAI. Joseph is a full stack developer with numerous experience in technology startups.</p>
+                                    <p>Joseph is the leading visionary and technologist of icardio.ai. Joseph is a full stack developer with numerous experience in technology startups.</p>
                                             </div>
                                         <div class="card">
                                     <img src="static/images/maximeheadshot.jpg" alt="Avatar" class="avatar">
-                                    <p><strong>Maxime Roussakov</strong><br>CTO</p>
-                                    <p style="margin: unset">Formally educated in actuarial mathematics, followed passion for programming with a masters in machine learning and stats (neural networks) at University of Montreal, world leader in AI research.</p>
+                                    <p><strong>Maxim Rusakov</strong><br>CTO</p>
+                                    <p style="margin: unset">Formally educated in mathematics and machine learning at world leading AI research university, University of Montreal, followed passion for software development and tech innovation through leadership roles in numerous institutional projects.</p>
                                             </div>
                                          <div class="card">
                                     <img src="static/images/Philippe.jpg" alt="Avatar" class="avatar">
