moving web app to internal drive

--- a/Applications/iCardioAI/templates/registration/password_reset_confirm.html
+++ b/Applications/iCardioAI/templates/registration/password_reset_confirm.html
@@ -12,7 +12,7 @@
         <center>
             <div style="max-width:420px" class="container">
                 <div class="z-depth-1 grey lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
-                    <form class="col s12" method="post" action='/reset/Mw/set-password/' style="padding: 0 1em 3em 1em;">
+                    <form class="col s12" method="post"  style="padding: 0 1em 3em 1em;">
                         <h4 class="card-title">Set a new password</h4>
                         {% if validlink %}
                         {% csrf_token %}
