--- a/Applications/iCardioAI/templates/upload.html
+++ b/Applications/iCardioAI/templates/upload.html
@@ -8,8 +8,8 @@
 <body style="background-color: black">
   <h3 class="loader typewriter" id="typewriter"></h3>
 <canvas id=c></canvas>
-   <div id="commence" style="opacity: 1;width: 100%;height:100%;position: absolute;visibility: hidden;transition: 2s;opacity: 1;transition: opacity 1s ease-in-out;-moz-transition: opacity 1s ease-in-out;-webkit-transition: opacity 1s ease-in-out;"><a class="waves-effect waves-light btn analysis-button modal-trigger" href="/loader" style="transform: translate(0%, 480%);right: -25%;">Commence Processing</a></div>
    <form action="#" method="post" enctype="multipart/form-data" style="transform: translate(50%, 100px);width: 50%;">
+   <div id="commence" style="opacity: 1;width: 100%;height:100%;position: absolute;visibility: hidden;transition: 2s;opacity: 1;transition: opacity 1s ease-in-out;-moz-transition: opacity 1s ease-in-out;-webkit-transition: opacity 1s ease-in-out;"><a class="waves-effect waves-light btn analysis-button modal-trigger" href="{% url 'loader' %}" style="transform: translate(0%, 480%);right: -25%;">Commence Processing</a></div>
     <div class="file-field input-field">
 <!--      <div class="btn analysis-button">-->
 <!--        <span>Upload Dicoms</span>-->
