changes to labeler app

--- a/Applications/iCardioAI/templates/validator.html
+++ b/Applications/iCardioAI/templates/validator.html
@@ -69,8 +69,8 @@
         <p>Long Axis</p>
         <a class="waves-light btn main" id="plax" view="PLAX">PLAX</a>
         <div class="input-field col s12 m6 sub-options" id="plax_options" style="display:none;">
-            <a class="btn" view="PLAX">PLAX Paracardial</a>
-            <a class="btn" view="PLAX">LVOT</a>
+            <a class="btn" view="PLAX">PLAX Paricardial</a>
+            <a class="btn" view="PLAX">PLAX Aortic Cusps</a>
             <a class="btn" view="PLAX">PLAX Mitral Cusps</a>
         </div>        
         <a class="btn main" view="RVIT">RVIT</a>
@@ -86,7 +86,8 @@
         <a class="btn main" view="PSAXA" id="psaxa">PSAXA</a>
         <div class="input-field col s12 m6 sub-options" id="psaxa_options" style="display:none;">
             <a class="btn" view="PSAXA">PSAXA Zoomed Aorta</a>
-            <a class="btn" view="PSAXA">PSAX Pulminary</a>
+            <a class="btn" view="PSAXA">PSAXA Pulminary</a>
+            <a class="btn" view="PSAXA">PSAXA Zoomed Tricuspid</a>
         </div>
     </div>
     <div class="input-field col s12 m6">
@@ -105,7 +106,10 @@
         <div class="input-field col s12 m6 sub-options" id="a2c_options" style="display:none;">
             <a class="btn" view="A2C">A2C Zoomed Mitral</a>
         </div>
-        <a class="btn main" view="A3C">A3C</a>
+        <a class="btn main" view="A3C" id="a3c">A3C</a>
+         <div class="input-field col s12 m6 sub-options" id="a3c_options" style="display:none;">
+            <a class="btn" view="A3C">A3C Zoomed Aorta</a>
+        </div>
     </div>
     <div class="input-field col s12 m6">
         <p>Subcostal</p>
