changes to web app

--- a/Applications/iCardioAI/templates/validator.html
+++ b/Applications/iCardioAI/templates/validator.html
@@ -24,7 +24,7 @@
         <div class="controls">
         <!--<a class="waves-effect waves-light btn analysis-button modal-trigger" id="blurry" href="/validator">Can't</a>-->
         </div>
-        <h3 class="view"></h3>
+        <h3 class="view">Number of tagged videos: {{ result.count }}</h3>
     </section>
     <div>
         <p style="color:white">Video ID: {{ result.object_id }}</p>
