--- a/Applications/iCardioAI/templates/loader.html
+++ b/Applications/iCardioAI/templates/loader.html
@@ -50,14 +50,7 @@ impulse behaviour:
     
 var setData = "Retrieving status.";
 var newData ;
-    
-$(function() {
-    console.log(setData);
-    setInterval(function() {
-        checkText();
-        console.log("Checking status at " + new Date().getTime());
-    }, 1000);
-});
+
 
 // set up text to print, each item in array is new line
 var iSpeed = 20; // time delay of print out
@@ -68,7 +61,21 @@ var iTextPos = 0; // initialise text position
 var sContents = ''; // initialise contents variable
 var iRow; // initialise current row
 
-
+function checkStatus() {
+    $.get('{%url "visit_status" pk=visit_id %}',function(response) {
+        if (response.status == 'done') {
+            return window.location.href = response.url;
+        }
+        else {
+            console.log(response)
+            setTimeout(checkStatus, 5000);
+            setData = response.log;
+            typewriter()
+        }
+    })
+}
+checkStatus();
+/*
 // continously reads status.txt for updates: 
 function checkText() {
     $.get('{% static "../static/Users/"%}{{user.username}}/Sessions/1/Reports/status.txt?_=' + new Date().getTime(), function(data) {
@@ -77,7 +84,7 @@ function checkText() {
         var statusLines = data.split('\n')
         
         // if status.txt is empty, do nothing, else, parse data:
-        if (statusLines.length<=1) {/*do nothing*/}
+       
         else {
             
             // get secont to last line of status.txt:
@@ -122,7 +129,7 @@ $.ajax({
     console.log('We clowned around.')
     }
 });
-    
+    */
     
     
     
