--- a/Applications/iCardioAI/templates/results.html
+++ b/Applications/iCardioAI/templates/results.html
@@ -75,10 +75,11 @@
 <!-- scalable verticle divider -->
 <script type="application/javascript" src="{% static '../static/js/divider.js' %}"></script>
 <!-- tools -->
+<script type="application/javascript">
+var jsonObject = {{ report_json | safe }}
+</script>
 <script type="application/javascript" src="{% static '../static/js/tools.js' %}"></script>
 <!-- image controllers -->
 <script type="application/javascript" src="{% static '../static/js/windows.js' %}"></script>
-<script type="application/javascript">
-var jsonObject = JSON.parse('{{ report_json | escapejs }}');
-</script>
+
 {% endblock %}
