changed typo in web app

--- a/Applications/iCardioAI/templates/validator.html
+++ b/Applications/iCardioAI/templates/validator.html
@@ -86,7 +86,7 @@
         <a class="btn main" view="PSAXA" id="psaxa">PSAXA</a>
         <div class="input-field col s12 m6 sub-options" id="psaxa_options" style="display:none;">
             <a class="btn" view="PSAXA">PSAXA Zoomed Aorta</a>
-            <a class="btn" view="PSAXA">PSAXA Pulminary</a>
+            <a class="btn" view="PSAXA">PSAXA Pulmonary</a>
             <a class="btn" view="PSAXA">PSAXA Zoomed Tricuspid</a>
         </div>
     </div>
