--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -69,3 +69,53 @@ body{
     text-align: left;
         width: 62%;
 }
+
+#myBtn{
+    outline: none;
+    color: white;
+    background-color: rgb(78, 78, 78);
+    padding: .375rem .75rem;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
+    font-weight: 400;
+    border-radius: .3rem;
+
+}
+
+.pop-up{
+    display: none;
+    position: fixed;
+    z-index: 100;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgb(0, 0, 0, 0.4);
+    align-items: center;
+    justify-content: center;
+}
+
+.modal-content{
+    background: #fefefe;
+    margin: auto;
+    padding: 20px;
+    max-width: 600px;
+    width: 100%;
+    color: black;
+}
+
+.close{
+    color: #aaaaaa;
+    float: right;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.close:hover, close:focus{
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
