--- a/templates/temp_results.html
+++ b/templates/temp_results.html
@@ -30,9 +30,26 @@
         <li> <span> Predicted View: </span> <span> {{ result.view.predicted_view }}</span> </li>
         <li> <span> View Confidence: </span> <span> {{ result.view.view_confidence|floatformat:2  }}</span> </li>
         <li> <span> View Model Type: </span> <span> {{ result.view.view_model_type }}</span> </li>
-        <li> <span> Predicted Abnormality: </span><span> {{ result.view.abnormality }}</span> </li> 
+        <li> <span> Predicted Abnormality: </span><span> {{ result.view.predicted_abnormality }}</span> </li> 
         <li> <span> Abnormality Confidence: </span> <span> {{ result.view.abnormality_confidence|floatformat:2 }}</span> </li>
         <li> <span> Binary Model Type: </span> <span> {{ result.view.binary_model_type }}</span> </li>
+        <li>
+            <span><button id="myBtn">Details</button></span>
+            <section id="myModal" class="pop-up">
+                <section class="modal-content">
+                    <span class="close">&times;</span>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                    sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+                    magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+                    quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+                    ut aliquip ex ea commodo consequat. Duis autem vel eum iriure
+                    dolor in hendrerit in vulputate velit esse molestie consequat,
+                    vel illum dolore eu feugiat nulla facilisis at vero eros et
+                    accumsan et.</p>
+                </section>
+            </section>
+        </li>
+        
         
     </ul>
     </div>
@@ -42,6 +59,78 @@
 </div>
 {% endfor %} 
 </div>
+
+<script>
+
+var json_object = {
+    "Left Ventricle": [
+      "Diastolic dysfunction.",
+      "Focal upper septal hypertrophy.",
+      "Left ventricular diastolic function.",
+      "Left ventricular hypertrophy.",
+      "Left ventricular enlargement.",
+      "Paradoxical septal motion consistent with  history of CABG.",
+      "Septal hypokinesis."
+    ],
+    "Left Atrium": [
+      "Hypermobile interatrial septum.",
+      "Left atrial dilation.",
+      "Left atrial elongation.",
+      "Left atrial enlargement.",
+      "Lipomatous hypertrophy of the interatrial septum."
+    ],
+    "Right Ventricle": [
+      "Right ventricular enlargement."
+    ],
+    "Aortic Valve": [
+      "Aortic insufficiency.",
+      "Aortic regurgitation.",
+      "Aortic sclerosis.",
+      "Aortic valve is trileaflet and thickened.",
+      "Calcification of the aortic leaflets with decreased excursion.",
+      "Calcification of the aortic leaflets with preserved excursion.",
+      "Elevated aortic outflow velocities."
+    ],
+    "Mitral Valve": [
+      "Mitral regurgitation.",
+      "Mitral valve insufficiency.",
+      "Mitral valve prolapse.",
+      "Mitral valve sclerosis without prolapse.",
+      "Posterior mitral annular calcification.",
+      "Thickening of the mitral leaflets with preserved excursion."
+    ],
+    "Aortic Root": [
+      "Aortic root dilation.",
+      "Aortic root enlargement.",
+      "Enalargement at the Sinus of Valsalva."
+    ],
+    "Pericardium": [
+      "Anterior pericardial fat pad.",
+      "Circumferential pericardial fat pad.",
+      "Pericardial effusion."
+    ]
+  }
+
+
+    const modal = document.getElementById("myModal");
+const btn = document.getElementById("myBtn")
+const close = document.getElementsByClassName("close")[0];
+
+btn.onclick = function(){
+    modal.style.display = "flex"
+    console.log("okay!!")
+}
+
+close.onclick = function(){
+    modal.style.display = "none"
+} 
+
+window.onclick = function(event){
+    if(event.target == modal){
+        modal.style.display = "none"
+    }
+}
+</script>
 
 <script>
 
